# genai

./: .gitignore  README.org  app.py  introduction-to-natural-language-processing.org  pyproject.toml  rag_demo.py  requirements.txt
NLP/: app.py  requirements.txt  text_gen.ipynb
RAG Development/: requirement.txt
RAG_Development/: rag_demo.ipynb  rag_demo.py
infra/: app.py
infra/genai_infra/: genai_infra_stack.py
infra/scripts/aws/: llmInstall.sh  onCreate.sh  onStart.sh
infra/tests/unit/: test_genai_infra_stack.py
