[project]
name = "kofi-genai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kofi-boateng", email = "kboateng@gmail.com" },
    { name = "outcastgeek", email = "outcastgeek+git@gmail.com" }
]
dependencies = [
    "altair==5.2.0",
    "attrs==23.2.0",
    "blinker==1.7.0",
    "cachetools==5.3.2",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "filelock==3.13.1",
    "fsspec==2024.2.0",
    "gitdb==4.0.11",
    "GitPython==3.1.41",
    "huggingface-hub==0.20.3",
    "idna==3.6",
    "importlib-metadata==7.0.1",
    "inquirerpy==0.3.4",
    "Jinja2==3.1.3",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==1.26.3",
    "packaging==23.2",
    "pandas==2.1.4",
    "pfzy==0.3.4",
    "pillow==10.2.0",
    "prompt-toolkit==3.0.43",
    "protobuf==4.25.2",
    "psutil==5.9.8",
    "pyarrow==15.0.0",
    "Pygments==2.17.2",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "PyYAML==6.0.1",
    "referencing==0.33.0",
    "regex==2023.12.25",
    "requests==2.31.0",
    "rich==13.7.0",
    "rpds-py==0.18.0",
    "safetensors==0.4.2",
    "sentencepiece==0.1.99",
    "six==1.16.0",
    "smmap==5.0.1",
    "streamlit>=1.31.1",
    "sympy==1.12",
    "tenacity==8.2.3",
    "tokenizers==0.15.2",
    "toml==0.10.2",
    "toolz==0.12.1",
    "torch==2.2.0",
    "tornado==6.4",
    "tqdm==4.66.1",
    "transformers==4.37.2",
    "typing_extensions==4.9.0",
    "tzdata==2023.4",
    "tzlocal==5.2",
    "urllib3==2.1.0",
    "validators==0.22.0",
    "watchdog==4.0.0",
    "wcwidth==0.2.13",
    "zipp==3.17.0",
    "aiohttp==3.9.3",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "anyio==4.2.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "azure-core==1.29.6",
    "azure-storage-blob==12.19.0",
    "Babel==2.14.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "cffi==1.16.0",
    "comm==0.2.1",
    "cryptography==41.0.7",
    "dataclasses-json==0.6.4",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "executing==2.0.1",
    "fastjsonschema==2.19.1",
    "fqdn==1.5.1",
    "frozenlist==1.4.1",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.3",
    "httpx==0.25.2",
    "ipykernel==6.29.2",
    "ipython==8.21.0",
    "isodate==0.6.1",
    "isoduration==20.11.0",
    "jedi==0.19.1",
    "joblib==1.3.2",
    "json5==0.9.14",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "jsonpointer==2.4",
    "jupyter-events==0.9.0",
    "jupyter-lsp==2.2.2",
    "jupyter_client==8.6.0",
    "jupyter_core==5.7.1",
    "jupyter_server==2.12.5",
    "jupyter_server_terminals==0.5.2",
    "jupyterlab==4.1.2",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.25.3",
    "lamini==2.0.6",
    "lamini-configuration==0.8.3",
    "langchain==0.1.6",
    "langchain-community==0.0.19",
    "langchain-core==0.1.23",
    "langsmith==0.0.87",
    "marshmallow==3.20.2",
    "matplotlib-inline==0.1.6",
    "mistune==3.0.2",
    "multidict==6.0.5",
    "mypy-extensions==1.0.0",
    "nbclient==0.9.0",
    "nbconvert==7.16.1",
    "nbformat==5.9.2",
    "nest-asyncio==1.6.0",
    "notebook_shim==0.2.4",
    "ollama==0.1.6",
    "overrides==7.7.0",
    "pandocfilters==1.5.1",
    "parso==0.8.3",
    "platformdirs==4.2.0",
    "prometheus_client==0.20.0",
    "pure-eval==0.2.2",
    "pycparser==2.21",
    "pydantic==2.6.1",
    "pydantic_core==2.16.2",
    "pypdf==4.0.2",
    "python-json-logger==2.0.7",
    "pywinpty==2.0.12",
    "pyzmq==25.1.2",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "Send2Trash==1.8.2",
    "sniffio==1.3.0",
    "soupsieve==2.5",
    "SQLAlchemy==2.0.27",
    "stack-data==0.6.3",
    "terminado==0.18.0",
    "threadpoolctl==3.2.0",
    "tinycss2==1.2.1",
    "traitlets==5.14.1",
    "types-python-dateutil==2.8.19.20240106",
    "typing-inspect==0.9.0",
    "uri-template==1.3.0",
    "webcolors==1.13",
    "webencodings==0.5.1",
    "websocket-client==1.7.0",
    "yarl==1.9.4",
    "sentence-transformers>=2.3.1",
    "faiss-cpu>=1.7.4",
    "aws-cdk-lib>=2.128.0",
    "constructs>=10.3.0",
]
readme = "README.org"
requires-python = ">= 3.10"

[project.scripts]
hello = "kofi_genai:hello"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.2.2",
    "pytest>=8.0.1",
    "isort>=5.13.2",
]

[tool.rye.scripts]
nlp-app = { cmd = "streamlit run ./NLP/app.py" }
rag-app = { cmd = "streamlit run ./RAG_Development/rag_demo.py" }
